--- a/config.toml
+++ b/config.toml
@@ -12,27 +12,23 @@ theme = "PaperMod"
 
 [menu]
   [[menu.main]]
+    identifier = "posts"
+    name = "Posts"
+    url = "/thoughts/"
+    weight = 10
+  [[menu.main]]
+    identifier = "about"
+    name = "About"
+    url = "/about/"
+    weight = 20
+  [[menu.main]]
     identifier = "search"
     name = "Search"
     url = "/search/"
-    weight = 10
+    weight = 30
 
 [taxonomies]
   category = "categories"
   tag = "tags"
 
 [params]
-  [params.profileMode]
-    enabled = true
-    title = "Spatium Novum"
-    subtitle = "On Models, Gaps, and the Space Left to Map"
-    # imageUrl = "/path/to/your/image.jpg" # Optional: link to a profile picture
-    # imageTitle = "My Picture" # Optional: alt text for the image
-    # imageWidth = 120 # Optional
-    # imageHeight = 120 # Optional
-    [[params.profileMode.buttons]]
-      name = "Posts"
-      url = "/thoughts"
-    [[params.profileMode.buttons]]
-      name = "About"
-      url = "/about"
